<resources>
    <string name="app_name">Sawase</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nik_nomor_telpon">NIK/Nomor Telpon</string>
    <string name="sawase">SaWaSe</string>
    <string name="sahabat_warga_senior">Sahabat Warga Senior</string>
    <string name="sandi_masuk">Sandi Masuk</string>
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempat_publik">Tempat Publik</string>
    <string name="komunitas">Komunitas</string>
    <string name="fasum">FaSum</string>
    <string name="tombol_darurat">Tombol Darurat</string>
    <string name="faskes">FasKes</string>

</resources>
