<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nomadnesia.sawase.LoginPage"
    android:background="@color/colorPrimaryDark"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_elderly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSawase1" />

    <TextView
        android:id="@+id/textSawase2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sahabat_warga_senior"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/textSawase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sawase"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:ems="15"
        android:hint="@string/nik_nomor_telpon"
        android:inputType="number|phone"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSawase2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:ems="15"
        android:hint="@string/sandi_masuk"
        android:inputType="textPassword|numberPassword"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <LinearLayout
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_dft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/daftar"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="150dp" />

        <Button
            android:id="@+id/btn_msk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/masuk"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="150dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
